styles/style.css
body {
    padding: 0;
    margin: 0;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

a {
    text-decoration: none;
}

.hero {
    background-color: #1F2937;
    display: flex;
    flex-direction: column;
}

header {
    display: flex;    
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    color: #F9FAF8;
}

.header-links {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 15px;
    margin-right: 200px;
    text-decoration: none;
}

.header-links a{
    color: #E5E7EB;
}

.logo {
    margin-left: 200px;
    font-size: 24px;
    font-weight: bolder;
}

.hero-main {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding-bottom: 120px;
    padding-top: 120px;
    gap: 100px;
}

.signup-section {
    flex-basis: 550px;
    display: flex;
    flex-direction: column;
}

h1 {
    font-size: 48px;
    font-weight: 900;
    margin: 0;
    color: #F9FAF8;
    line-height: 1.4;
}

.signup-section p {
    color: #E5E7EB;
    margin: 0;
    padding: 0;
    font-size: 18px;
    margin-bottom: 8px;
}

.signup-section button {
    align-self: flex-start;
    padding: 7px 35px;
    background-color: #3882F6;
    border: none;
    border-radius: 8px;
    color: #E5E7EB;
    font-size: 18px;
    color: #E5E7EB;
    font-weight: 700;
}

.hero-img {
    height: min-content;
    width: 550px;
    flex-shrink: 0;
}

.information {
    display: flex;
    flex-direction: column;
    align-items: center;
    color: #1F2937;
    padding-top: 20px;
    padding-bottom: 100px;
}

.information h2 {
    font-size: 36px;
    font-weight: 900;
}

.picture-cards-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 50px;
}

.card {
    display: flex;
    flex-direction: column;
    flex-basis: 160px;
    text-align: center;
}

.card img {
    width: 160px;
    height: 160px;
    border: 4px solid #3882F6;
    border-radius: 18px;
    margin-bottom: 10px;
}

.quote-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #E5E7EB;
    padding: 80px 0;
    font-size: 36px;
    font-style: italic;
    color: #1F2937;
    text-align: center;
    font-weight: 100;
    font-family: "Helvetica Neue";
}

.quote {
    margin: 0;
    padding: 0;
    max-width: 1000px;
}

.quotee {
    padding: 0 30px;
    margin: 0;
    margin-left: 400px;
}

.call-to-action {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: 120px 240px;
    padding: 50px;
    background-color: #3882F6;
    border-radius: 15px;
    font-size: 18px;
    color: #F9FAF8;
}

.call-to-action button {
    flex: none;
    background-color: #3882F6;
    color: #F9FAF8;
    font-size: 18px;
    font-weight: 600;
    border: 2px solid #F9FAF8;
    border-radius: 5px;
    padding: 6px 40px;
}

.call-to-action h3,
.call-to-action p {
    margin: 0;
    padding: 3px 0;
}

footer {
    padding: 25px;
    background-color: #1F2937;
    color: #F9FAF8;
    text-align: center;
}

footer a {
    color: #F9FAF8;
    text-decoration: underline;
}

